{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 17,
  "lineage": "01eaeee0-d632-1c40-69a1-8269e78a359c",
  "resources": [
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.ecs_cluster.provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267015221:internet-gateway/igw-0d574901dc1ba4bdb",
            "id": "igw-0d574901dc1ba4bdb",
            "owner_id": "533267015221",
            "vpc_id": "vpc-0cf9d0e1b47bb5195"
          },
          "dependencies": [
            "module.ecs_cluster.aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnet",
      "provider": "module.ecs_cluster.provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267015221:route-table/rtb-0ff49d52ac3e11b2a",
            "id": "rtb-0ff49d52ac3e11b2a",
            "owner_id": "533267015221",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d574901dc1ba4bdb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cf9d0e1b47bb5195"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs_cluster.aws_internet_gateway.igw",
            "module.ecs_cluster.aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_a_association",
      "provider": "module.ecs_cluster.provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00eefc46bf0f9640a",
            "route_table_id": "rtb-0ff49d52ac3e11b2a",
            "subnet_id": "subnet-06d7108e250c6ca1c"
          },
          "dependencies": [
            "module.ecs_cluster.aws_internet_gateway.igw",
            "module.ecs_cluster.aws_route_table.public_subnet",
            "module.ecs_cluster.aws_subnet.public_subnet",
            "module.ecs_cluster.aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_security_group",
      "provider": "module.ecs_cluster.provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267015221:security-group/sg-060e5b8a071d94091",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-060e5b8a071d94091",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240312092029720000000002",
            "name_prefix": "terraform-",
            "owner_id": "533267015221",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-security-group"
            },
            "tags_all": {
              "Name": "ecs-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf9d0e1b47bb5195"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs_cluster.aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "module.ecs_cluster.provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267015221:subnet/subnet-005dfb87324795f23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005dfb87324795f23",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267015221",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-subnet"
            },
            "tags_all": {
              "Name": "ecs-subnet"
            },
            "vpc_id": "vpc-0cf9d0e1b47bb5195"
          },
          "dependencies": [
            "module.ecs_cluster.aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "module.ecs_cluster.provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267015221:subnet/subnet-06d7108e250c6ca1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d7108e250c6ca1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "533267015221",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-subnet"
            },
            "tags_all": {
              "Name": "ecs-subnet"
            },
            "vpc_id": "vpc-0cf9d0e1b47bb5195"
          },
          "dependencies": [
            "module.ecs_cluster.aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_cluster",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ecs_vpc",
      "provider": "module.ecs_cluster.provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267015221:vpc/vpc-0cf9d0e1b47bb5195",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08c5fb29bff8ff016",
            "default_route_table_id": "rtb-0f4c180db3f67c764",
            "default_security_group_id": "sg-0a73fd430aa2bb0fc",
            "dhcp_options_id": "dopt-0b71073ea2eaad495",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cf9d0e1b47bb5195",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f4c180db3f67c764",
            "owner_id": "533267015221",
            "tags": {
              "Name": "ecs-vpc"
            },
            "tags_all": {
              "Name": "ecs-vpc"
            }
          }
        }
      ]
    }
  ]
}